# cognitive-engineering-lab-mdbook-quiz

./: Cargo.toml
.github/workflows/: main.yml
crates/mdbook-quiz/: Cargo.toml
crates/mdbook-quiz-schema/: Cargo.toml
crates/mdbook-quiz-validate/: Cargo.toml
crates/mdbook-quiz/src/: main.rs
example/mdbook/: book.toml
